# split_fstream

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: split_fstream.h  split_ifstream.cpp  split_ofstream.cpp
test/: CMakeLists.txt  main.cpp  sha256.cpp
